--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,6 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.10.6+build.214
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 1.1.0-beta.1
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.1+build.416-1.16
