--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.16.4
 	yarn_mappings=1.16.4+build.6
 	loader_version=0.10.6+build.214
+	modmenu_version = 1.14.6+build.31
 
 # Mod Properties
 	mod_version = 1.1.0-beta.1
