--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,9 @@ org.gradle.jvmargs=-Xmx1G
 	yarn_mappings=1.16.4+build.6
 	loader_version=0.10.6+build.214
 	modmenu_version = 1.14.6+build.31
+	fabric_version=0.29.1+1.16
 
 # Mod Properties
-	mod_version = 1.1.0-beta.1
+	mod_version = 1.1.0-beta.2
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
