--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,6 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_version=0.29.1+1.16
 
 # Mod Properties
-	mod_version = 1.1.0-beta.3
+	mod_version = 1.1.0
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
