--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,19 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+	maven {
+		url "https://www.cursemaven.com"
+	}
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "curse.maven:bedrockify-403858:3152545"
 	modImplementation ("io.github.prospector:modmenu:${project.modmenu_version}") {
 		exclude module: "fabric-api"
 	}
