--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	//modImplementation "curse.maven:bedrockify-403858:3152545"
+	modImplementation "curse.maven:bedrockify-403858:3152545"
 	modImplementation ("io.github.prospector:modmenu:${project.modmenu_version}") {
 		exclude module: "fabric-api"
 	}
