--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.6
-	loader_version=0.10.6+build.214
-	modmenu_version = 1.14.6+build.31
-	fabric_version=0.30.0+1.16
+	minecraft_version=1.17-pre1
+	yarn_mappings=1.17-pre1+build.1
+	loader_version=0.11.3
+
+	modmenu_version = 2.0.0-beta.7
+	fabric_version=0.34.8+1.17
 
 # Mod Properties
-	mod_version = 1.3.4
+	mod_version = 1.3.4+1.17
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
