--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
+# check these on https://fabricmc.net/use
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.2
+	loader_version=0.12.11
 
-	modmenu_version = 2.0.0-beta.7
-	fabric_version=0.37.0+1.17
+	modmenu_version = 3.0.0
+	fabric_version=0.44.0+1.18
 
 # Mod Properties
 	mod_version = 1.3.6+1.17.1
