--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 	modmenu_version = 4.1.2
 	fabric_version=0.70.0+1.19.2
-
+#build
 # Mod Properties
 	mod_version = 1.4.0+1.19.2
 	maven_group = com.minenash
