--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '1.3-SNAPSHOT'
+	id 'io.github.juuxel.loom-vineflower' version '1.11.0'
 	id 'maven-publish'
 }
 
@@ -28,6 +29,42 @@ dependencies {
 //	modImplementation "curse.maven:bedrockify-403858:3152545"
 	modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}") {
 		exclude module: "fabric-api"
+	}
+}
+
+loom {
+	runs {
+		client_mixin {
+			client()
+			ideConfigGenerated true
+			name = "[${project.archivesBaseName}] Client - (Mixin Swap)"
+			source sourceSets.main
+			vmArg "-Dmixin.debug.export=true"
+
+			try {
+				afterEvaluate {
+					def mixinDep = this.configurations.compileClasspath
+							.allDependencies
+							.findAll { it.name == "sponge-mixin" }
+							.first()
+
+					if (mixin != null) {
+						def mixinPath = this.configurations.compileClasspath.files(mixinDep).first().path;
+
+						println(mixinPath)
+
+						vmArg("-javaagent:\"${mixinPath}\"")
+
+						println("[Info]: Mixin Hotswap Run should be working")
+					} else {
+						println("[Warning]: Unable to locate file path for Mixin Jar, HotSwap Run will not work!!!")
+					}
+				}
+			} catch (Exception e) {
+				println("[Error]: MixinHotswap Run had a issue!")
+				e.printStackTrace()
+			}
+		}
 	}
 }
 
