--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.4
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
 	loader_version=0.14.22
 
-	modmenu_version = 3.1.0
-	fabric_version=0.76.0+1.18.2
+	modmenu_version = 4.2.0-beta.2
+	fabric_version=0.76.1+1.19.2
 
 # Mod Properties
 	mod_version = 1.4.0+1.18.2
