--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 	maven {
 		url "https://maven.terraformersmc.com/releases/"
 	}
+	maven {
+		url = "https://api.modrinth.com/maven"
+	}
 }
 
 dependencies {
@@ -30,6 +33,8 @@ dependencies {
 	modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}") {
 		exclude module: "fabric-api"
 	}
+
+	//modImplementation include("maven.modrinth:midnightlib:${project.midnightlib_version}-fabric")
 }
 
 loom {
