--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,9 @@ org.gradle.jvmargs=-Xmx4G
 	fabric_version=0.76.1+1.19.2
 
 # Mod Properties
-	mod_version = 1.4.0+1.18.2
+	mod_version = 1.4.0+1.18.2-midnight-lib-internal
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
+
+# Libs
+	midnightlib_version = 1.0.0
