--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,24 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.22
-
-	modmenu_version = 4.2.0-beta.2
-	fabric_version=0.76.1+1.19.2
-
 # Mod Properties
 	mod_version = 1.4.0+1.18.2-midnight-lib-internal
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
 
-# Libs
+# Common Properties
+	minecraft_version=1.19.2
+	enabled_platforms=fabric,forge
+	yarn_mappings=1.19.2+build.28
+
 	midnightlib_version = 1.0.0
+
+# Fabric
+	fabric_loader_version=0.14.22
+	fabric_api_version=0.76.1+1.19.2
+
+	modmenu_version = 4.2.0-beta.2
+
+# Forge
+	forge_version=1.19.2-43.2.8
+
