--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,17 @@
 pluginManagement {
     repositories {
         jcenter()
-        maven {
-            name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
+        repositories {
+            maven { url "https://maven.fabricmc.net/" }
+            maven { url "https://maven.architectury.dev/" }
+            maven { url "https://maven.minecraftforge.net/" }
+            gradlePluginPortal()
         }
-        gradlePluginPortal()
     }
 }
+
+include("common")
+include("fabric")
+include("forge")
+
+rootProject.name = "seamless-loading-screen"
