--- a/gradle.properties
+++ b/gradle.properties
@@ -7,18 +7,16 @@ org.gradle.jvmargs=-Xmx4G
 	archives_base_name = seamless-loading-screen
 
 # Common Properties
-	minecraft_version=1.19.2
-	enabled_platforms=fabric,forge
-	yarn_mappings=1.19.2+build.28
-
-	midnightlib_version = 1.0.0
+	minecraft_version = 1.19.4
+	enabled_platforms = fabric,forge
+	yarn_mappings = 1.19.4+build.2
 
 # Fabric
-	fabric_loader_version=0.14.22
-	fabric_api_version=0.76.1+1.19.2
+	fabric_loader_version = 0.14.22
+	fabric_api_version = 0.87.0+1.19.4
 
-	modmenu_version = 4.2.0-beta.2
+	modmenu_version = 6.3.1
 
 # Forge
-	forge_version=1.19.2-43.2.8
+	forge_version = 1.19.4-45.1.0
 
