Implement Intro Sound Effect and Blur effect (Credit: mineblock11)
- Include Blur Shader Program (Credit: @glisco)

Co-Authored-By: Calum <93472213+mineblock11@users.noreply.github.com>

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ allprojects {
 			url "https://maven.terraformersmc.com/releases/"
 		}
 		maven {
-			url = "https://api.modrinth.com/maven"
+			name = "Modrinth"
+			url "https://api.modrinth.com/maven"
+			content { includeGroup "maven.modrinth" }
 		}
 	}
 
