--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -61,6 +61,11 @@ dependencies {
         exclude module: "fabric-api"
     }
 
+//    modLocalRuntime ("maven.modrinth:bedrockify:1.9+mc1.20")
+//    modLocalRuntime ("me.shedaniel.cloth:cloth-config-fabric:11.0.98", { exclude group: "net.fabricmc.fabric-api" })
+
+    //modLocalRuntime ("maven.modrinth:fastload:3.4.0")
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 }
