--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -30,6 +30,8 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
 
+    //modLocalRuntime ("maven.modrinth:fastload:mc1.20.1-3.4.0")
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 }
