--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.jvmargs=-Xmx4G
 	fabric_api_version=0.76.1+1.19.2
 
 	modmenu_version = 4.2.0-beta.2
+	satin_version = 1.9.0
 
 # Forge
 	forge_version=1.19.2-43.2.8
