Update Build workflow to put mod versions in separate artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,11 +40,11 @@ jobs:
         if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
         uses: actions/upload-artifact@v2
         with:
-          name: Artifacts
+          name: Artifacts-Fabric
           path: fabric/build/libs/
       - name: capture forge build artifacts
         if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from LTS java on one OS
         uses: actions/upload-artifact@v2
         with:
-          name: Artifacts
+          name: Artifacts-Forge
           path: forge/build/libs/
