--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Mod Properties
-	mod_version = 1.4.0+1.18.2-midnight-lib-internal
+	mod_version = 2.0.0+1.19.4
 	maven_group = com.minenash
 	archives_base_name = seamless-loading-screen
 
