--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@ org.gradle.jvmargs=-Xmx4G
 	enabled_platforms = fabric,forge
 	yarn_mappings = 1.19.4+build.2
 
+	yacl_version = 3.0.1+1.19.4
+
 # Fabric
 	fabric_loader_version = 0.14.22
 	fabric_api_version = 0.87.0+1.19.4
