feat: Migrate to YACL

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
-
 # Mod Properties
-	mod_version = 2.0.0+1.20.1
-	maven_group = com.minenash
-	archives_base_name = seamless-loading-screen
-
+mod_version=2.0.0+1.20.1
+maven_group=com.minenash
+archives_base_name=seamless-loading-screen
 # Common Properties
-	minecraft_version = 1.20.1
-	enabled_platforms = fabric,forge
-	yarn_mappings = 1.20.1+build.10
-
+minecraft_version=1.20.1
+enabled_platforms=fabric,forge
+yarn_mappings=1.20.1+build.10
+yacl_version=3.0.1+1.20
 # Fabric
-	fabric_loader_version = 0.14.22
-	fabric_api_version = 0.87.0+1.20.1
-
-	modmenu_version = 7.2.1
-
+fabric_loader_version=0.14.22
+fabric_api_version=0.87.0+1.20.1
+modmenu_version=7.2.1
 # Forge
-	forge_version = 1.20.1-47.1.0
+forge_version=1.20.1-47.1.0
 
