chore: Finalize icon and finish 2.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ yacl_version=3.0.1+1.20
 fabric_loader_version=0.14.22
 fabric_api_version=0.87.0+1.20.1
 modmenu_version=7.2.1
+bedrockify_version=1.9+mc1.20
 # Forge
 forge_version=1.20.1-47.1.0
 
