--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -57,12 +57,11 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
 
-    modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}") {
+    modImplementation ("com.terraformersmc:modmenu:${rootProject.modmenu_version}") {
         exclude module: "fabric-api"
     }
 
-    modLocalRuntime ("maven.modrinth:bedrockify:1.9+mc1.20")
-    modLocalRuntime ("me.shedaniel.cloth:cloth-config-fabric:11.0.98", { exclude group: "net.fabricmc.fabric-api" })
+    modCompileOnly ("maven.modrinth:bedrockify:${rootProject.bedrockify_version}")
 
     modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
     include "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
