chore: Finalize icon and finish 2.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.jvmargs=-Xmx4G
 	fabric_api_version = 0.87.0+1.19.4
 
 	modmenu_version = 6.3.1
+    bedrockify_version=1.8.1+mc1.19.4
 
 # Forge
 	forge_version = 1.19.4-45.1.0
