--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
 
     //modLocalRuntime ("maven.modrinth:fastload:mc1.20.1-3.4.0")
+    //modLocalRuntime ("maven.modrinth:rubidium:0.6.2b")
+    //modCompileOnly ("maven.modrinth:rubidium:0.6.2b")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
