Change Sodium Options key to new update to date version

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -15,6 +15,7 @@ logoFile = "icon.png"
 
 [mods."sodium:options"]
 "mixin.features.gui.fast_loading_screen" = false
+"features.gui.screen" = false
 
 [[dependencies.seamless_loading_screen]]
 modId = "forge"
