--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,32 @@ allprojects {
 	group = rootProject.maven_group
 
 	repositories {
-		maven {
-			url "https://maven.terraformersmc.com/releases/"
-		}
+		maven { url "https://maven.terraformersmc.com/releases/" }
 		maven {
 			name = "Modrinth"
 			url "https://api.modrinth.com/maven"
 			content { includeGroup "maven.modrinth" }
 		}
 		maven { url 'https://maven.isxander.dev/releases' }
+		maven { url 'https://jitpack.io' }
+		maven {
+			name = "Ladysnake Libs"
+			url = 'https://maven.ladysnake.org/releases'
+		}
+		maven {
+			url = 'https://maven.cafeteria.dev'
+			content {
+				includeGroup 'net.adriantodt.fabricmc'
+			}
+		}
+		maven {
+			url "https://maven.jamieswhiteshirt.com/libs-release"
+			content {
+				includeGroup "com.jamieswhiteshirt"
+			}
+		}
+		maven { url "https://maven.shedaniel.me/" }
+		maven { url "https://maven.terraformersmc.com/" }
 	}
 
 	tasks.withType(JavaCompile) {
