--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -68,10 +68,24 @@ dependencies {
 
     //modLocalRuntime ("maven.modrinth:fastload:3.4.0")
 
-//    modLocalRuntime ("com.github.quiqueck:BCLib:3.0.13")
-//    modLocalRuntime ("maven.modrinth:betterend:4.0.10")
+    //modLocalRuntime ("com.github.quiqueck:BCLib:3.0.13")
+    //modLocalRuntime ("maven.modrinth:betterend:4.0.10")
 
     //modImplementation ("com.github.apace100:origins-fabric:v1.10.0")
+
+    modRuntimeOnly ("maven.modrinth:auth-me:7.0.2+1.20")
+
+    modRuntimeOnly ("me.shedaniel.cloth:cloth-config-fabric:11.1.106") {
+        exclude module: 'modmenu'
+        exclude module: 'fabric-api'
+    }
+
+    //modImplementation ("maven.modrinth:wynntils:VLZyj8bb")
+
+    //modRuntimeOnly("com.github.wynntils:hades:v0.5.1") { transitive false }
+    //modRuntimeOnly("com.github.wynntils:antiope:v0.2.2") { transitive false }
+
+    //modRuntimeOnly("com.github.llamalad7.mixinextras:mixinextras-fabric:0.2.0-beta.9")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
