--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -65,15 +65,19 @@ dependencies {
         exclude module: "fabric-api"
     }
 
-//    modLocalRuntime ("maven.modrinth:bedrockify:1.9+mc1.20")
-//    modLocalRuntime ("me.shedaniel.cloth:cloth-config-fabric:11.0.98", { exclude group: "net.fabricmc.fabric-api" })
+    modLocalRuntime ("maven.modrinth:auth-me:4.2.0")
+
+    //modLocalRuntime ("maven.modrinth:bedrockify:1.9+mc1.20")
+    //modLocalRuntime ("me.shedaniel.cloth:cloth-config-fabric:11.0.98", { exclude group: "net.fabricmc.fabric-api" })
 
     //modLocalRuntime ("maven.modrinth:fastload:3.4.0")
 
-//    modLocalRuntime ("com.github.quiqueck:BCLib:3.0.13")
-//    modLocalRuntime ("maven.modrinth:betterend:4.0.10")
+    //modLocalRuntime ("com.github.quiqueck:BCLib:3.0.13")
+    //modLocalRuntime ("maven.modrinth:betterend:4.0.10")
 
     //modImplementation ("com.github.apace100:origins-fabric:v1.10.0")
+
+    //modLocalRuntime ("me.shedaniel.cloth:cloth-config-fabric:8.3.103", { exclude group: "net.fabricmc.fabric-api" })
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
