--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -63,8 +63,8 @@ dependencies {
 
     modCompileOnly("maven.modrinth:bedrockify:${rootProject.bedrockify_version}")
 
-    modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
-    include "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
+    modImplementation ("dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}")
+    //include "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
 
     //modLocalRuntime ("maven.modrinth:fastload:3.4.0")
 
