--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,25 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
 # Mod Properties
-mod_version=2.1.1+1.20.2
+mod_version=2.1.1+1.20.4
 maven_group=com.minenash
 archives_base_name=seamless-loading-screen
 # Common Properties
-minecraft_version=1.20.2
-enabled_platforms=fabric,forge
-yarn_mappings=1.20.2+build.4
-yacl_version=3.2.1+1.20.2
+minecraft_version=1.20.4
+enabled_platforms=fabric,neoforge
+yarn_mappings=1.20.4+build.3
+yacl_version=3.3.1+1.20.4
+
 # Fabric
-fabric_loader_version=0.14.23
-fabric_api_version=0.90.0+1.20.2
-modmenu_version=8.0.0
+fabric_loader_version=0.15.3
+fabric_api_version=0.92.0+1.20.4
+
+modmenu_version=9.0.0
 bedrockify_version=1.9.1+mc1.20.2
+
+# NeoForge
+neoforge_version=20.4.46-beta
+
 # Forge
-forge_version=1.20.2-48.0.13
+forge_version=1.20.4-49.0.12
 
