--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ pluginManagement {
             maven { url "https://maven.fabricmc.net/" }
             maven { url "https://maven.architectury.dev/" }
             maven { url "https://maven.minecraftforge.net/" }
+            maven { url "https://maven.neoforged.net/releases/" }
             gradlePluginPortal()
         }
     }
@@ -12,6 +13,7 @@ pluginManagement {
 
 include("common")
 include("fabric")
-include("forge")
+//include("forge")
+include("neoforge")
 
 rootProject.name = "seamless-loading-screen"
