Finally get Neoforge working
- Fix issues with import propblems with arch
- Fix issues within yacl due to changes to AW not being remapped and used leading to the need for some AT stuff to fix it
- Remove AW stuff as it can be replaced with a mixin

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -11,7 +11,7 @@ loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
 
     forge {
-        convertAccessWideners = true
+        //convertAccessWideners = true
         extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
 
         mixinConfig "seamless_loading_screen-common.mixins.json"
