--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 repositories {
     maven { url = 'https://maven.neoforged.net/releases/' }
+    maven { url = "https://maven.quiltmc.org/repository/release" }
 }
 
 architectury {
@@ -15,11 +16,7 @@ loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
 
     neoForge {
-//        convertAccessWideners = true
-//        extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
-//
-//        mixinConfig "seamless_loading_screen-common.mixins.json"
-//        mixinConfig "seamless_loading_screen-neoForge.mixins.json"
+        accessTransformer {file('src/main/resources/META-INF/accesstransformer.cfg')}
     }
 }
 
@@ -34,14 +31,12 @@ configurations {
 dependencies {
     neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
 
-    //modLocalRuntime ("maven.modrinth:fastload:mc1.20.1-3.4.0")
-    //modLocalRuntime ("maven.modrinth:rubidium:0.7.0a")
-    //modCompileOnly ("maven.modrinth:rubidium:0.7.0a")
-
-    modImplementation("dev.isxander.yacl:yet-another-config-lib-neoforge:${rootProject.yacl_version}"){
+    modImplementation("dev.isxander.yacl:yet-another-config-lib-neoforge:${rootProject.yacl_version}") {
         transitive = false
     }
-    //include "dev.isxander.yacl:yet-another-config-lib-neoforge:${rootProject.yacl_version}"
+
+    forgeRuntimeLibrary("org.quiltmc.parsers:json:0.2.1")
+    forgeRuntimeLibrary("org.quiltmc.parsers:gson:0.2.1")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
@@ -68,7 +63,7 @@ remapJar {
     dependsOn shadowJar
     archiveClassifier.set "neoforge"
 
-    atAccessWideners.add(loom.accessWidenerPath.get().asFile.name)//atAccessWideners.add('my_mod.accesswidener')
+    //atAccessWideners.add(loom.accessWidenerPath.get().asFile.name)
 }
 
 jar {
