--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,11 +6,18 @@ loom {
     accessWidenerPath = file("src/main/resources/seamless_loading_screen.accesswidener")
 }
 
+repositories {
+    flatDir { dir 'libraries' }
+}
+
 dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${rootProject.yacl_version}"
+
+    // Distant Horizons
+    modImplementation "blank:DistantHorizonsApi-${rootProject.distant_horizons_api_version}"
 }
 
 publishing {
