--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ minecraft_version=1.20.4
 enabled_platforms=fabric,neoforge
 yarn_mappings=1.20.4+build.3
 yacl_version=3.3.1+1.20.4
+distant_horizons_api_version=1.1.0
 
 # Fabric
 fabric_loader_version=0.15.3
